# onion-history

./: .gitignore  PLANNING.md  README.md  fetch.py  fetch_dates.py  main.py  optimize.py  pyproject.toml
web/: package-lock.json  package.json  tailwind.config.ts
web/app/: globals.css  layout.tsx  page.tsx
web/app/[slug]/: page.tsx
web/app/about/: page.tsx
web/app/random/: layout.tsx  page.tsx
web/components/: DayNav.tsx  Footer.tsx  FullArchive.tsx  Header.tsx  Highlights.tsx
web/lib/: data.ts  dates.ts  slug.ts  types.ts
web/scripts/: preprocess.ts
